--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "koa-bodyparser": "^4.3.0",
     "koa-logger": "^3.2.1",
     "mongoose": "^6.8.1",
+    "tsc-watch": "^6.0.0",
     "typescript-is": "^0.19.0",
     "zod": "^3.20.2"
   }
